fix flex overflow

--- a/docs/Portfolio/index.css
+++ b/docs/Portfolio/index.css
@@ -97,6 +97,7 @@ hr{
     justify-content: flex-start;
     align-items: center;
     gap:10px;
+    flex-grow:1;
 }
 
 .icon-container{
@@ -405,6 +406,7 @@ section > .small-sub-font {
     display: flex;
     justify-content: space-evenly;
     gap: 8px;
+    flex-grow:1;
 }
 
 .tools-container{
@@ -417,11 +419,11 @@ section > .small-sub-font {
 }
 
 .tools-container .mini-card{
-    width: 30%;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
 }
 
 .mini-card img{
@@ -490,10 +492,6 @@ p .small-sub-font{
         min-width:250px;
     }
 
-    .tools-container .mini-card{
-        width:auto;
-        max-width: 40%;
-    }
 }
 
 @media screen and (min-width:950px) {
